# seo-backend

./: .gitignore  openapi.json  pyproject.toml  run-server.sh
app/: __init__.py  server.py
app/godaddy/: api.py  schema.py
app/google/: api.py  schema.py
app/moz/: api.py  schema.py
app/utils/: common.py
