[tool.poetry]
name = "seo-backend"
version = "0.0.1"
description = ""
authors = ["Daksh Sardana <dakshsardana@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.65.1"
uvicorn = "^0.14.0"
SQLAlchemy = "^1.4.31"
alembic = "^1.7.5"
psycopg2 = "^2.9.3"
pandas = "^1.4.0"
python-multipart = "^0.0.5"
openpyxl = "^3.0.9"
tqdm = "^4.64.1"
aiofiles = "^23.1.0"
google-search-results = "^2.4.2"
langchain = "^0.0.185"
psutil = "^5.9.5"
buffer = "^0.2.1"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.7"
requests = "^2.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
